apps/glance/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glance
  namespace: glance
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: glance
  template:
    metadata:
      labels:
        app: glance
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
      containers:
        - name: glance
          image: glanceapp/glance:v0.8.4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "150m"
              memory: "64Mi"
            limits:
              memory: "128Mi"
          volumeMounts:
            - name: config
              mountPath: /app/config/glance.yml
              subPath: glance.yml
      volumes:
        - name: config
          configMap:
            name: glance-config
