apps/glance/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: glance
  namespace: glance
spec:
  selector:
    app: glance
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
