apps/glance/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: glance
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`home.${DOMAIN}`) || Host(`dashboard.${DOMAIN}`)
      kind: Rule
      middlewares:
        - name: authelia-auth
          namespace: traefik
      services:
        - name: glance
          port: 80
          namespace: glance
  tls: {}
